保存一下代码

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Vue project template</title>
+    <title>My first Vue project</title>
 </head>
-<body>
+<body style='background-color: #fff;'>
     <!-- 这是容器 -->
     <div id="app">
      
